--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>barberLanding</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo_container">
+            <a href=""><h1>Logo</h1></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Prices</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Schedule</a></li>
+            </ul>
+            <div class="header_buttons">
+                <a href="">Login</a>
+                <a href="">Sign Up</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
