--- a/index.html
+++ b/index.html
@@ -72,5 +72,45 @@
         </div>
       </article>
     </section>
+    <section id="aboutUs" class="aboutUs_container">
+      <h2 class="aboutUs_title">Our Team</h2>
+      <article class="barber_article">
+        <div class="foto_barber1"></div>
+        <div class="text_article_aboutUs">
+          <h2 class="title_article_aboutUs">Juan Perez</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat,
+            necessitatibus. Veritatis quam repudiandae error sequi architecto
+            nemo impedit magni? Provident quos autem voluptas, at aliquam alias
+            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab quis deserunt incidunt architecto earum perspiciatis recusandae, suscipit, nemo, praesentium harum officia laboriosam rerum cum sequi.
+          </p>
+        </div>
+      </article>
+      <article class="barber_article">
+        <div class="text_article_aboutUs">
+          <h2 class="title_article_aboutUs">Reina Rodriguez</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat,
+            necessitatibus. Veritatis quam repudiandae error sequi architecto
+            nemo impedit magni? Provident quos autem voluptas, at aliquam alias
+            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab quis deserunt incidunt architecto earum perspiciatis recusandae, suscipit, nemo, praesentium harum officia laboriosam rerum cum sequi.
+          </p>
+        </div>
+        <div class="foto_barber2"></div>
+      </article>
+    </section>
+    <section id="galery" class="galery_container">
+      <article class="galery_article">
+        <h2>Galery</h2>
+        <div class="fotos_container">
+          <img class="galery_foto" src="./src/grid1.jpg" alt="">
+          <img class="galery_foto" src="./src/grid2.jpg" alt="">
+          <img class="galery_foto" src="./src/grid3.jpg" alt="">
+          <img class="galery_foto" src="./src/grid4.jpg" alt="">
+          <img class="galery_foto" src="./src/grid5.jpg" alt="">
+          <img class="galery_foto" src="./src/grid6.jpg" alt="">
+        </div>
+      </article>
+    </section>
   </body>
 </html>
