galery added, no completed

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     </section>
     <section id="galery" class="galery_container">
       <article class="galery_article">
-        <h2>Galery</h2>
+        <h2 class="galery_title">Galery</h2>
         <div class="fotos_container">
           <img class="galery_foto" src="./src/grid1.jpg" alt="">
           <img class="galery_foto" src="./src/grid2.jpg" alt="">
           <img class="galery_foto" src="./src/grid3.jpg" alt="">
-          <img class="galery_foto" src="./src/grid4.jpg" alt="">
+          <img class="galery_foto" src="./src/grid1.jpg" alt="">
           <img class="galery_foto" src="./src/grid5.jpg" alt="">
           <img class="galery_foto" src="./src/grid6.jpg" alt="">
         </div>
