finish the page, waiting for changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="">Home</a></li>
           <li><a href="">Prices</a></li>
           <li><a href="">About Us</a></li>
-          <li><a href="">Schedule</a></li>
+          <li><a href="">ask</a></li>
         </ul>
         <div class="header_buttons">
           <a href="">Login</a>
@@ -38,7 +38,7 @@
         <div class="text-hero">
           <span>Come and</span> Change <br /><span>Your </span>Style
         </div>
-        <a href="">Schedule</a>
+        <a href="">ask</a>
       </article>
     </main>
     <section class="prices_container" id="prices">
@@ -82,7 +82,11 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat,
             necessitatibus. Veritatis quam repudiandae error sequi architecto
             nemo impedit magni? Provident quos autem voluptas, at aliquam alias
-            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab quis deserunt incidunt architecto earum perspiciatis recusandae, suscipit, nemo, praesentium harum officia laboriosam rerum cum sequi.
+            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab
+            quis deserunt incidunt architecto earum perspiciatis recusandae,
+            suscipit, nemo, praesentium harum officia laboriosam rerum cum
+            sequi.
           </p>
         </div>
       </article>
@@ -93,7 +97,11 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat,
             necessitatibus. Veritatis quam repudiandae error sequi architecto
             nemo impedit magni? Provident quos autem voluptas, at aliquam alias
-            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab quis deserunt incidunt architecto earum perspiciatis recusandae, suscipit, nemo, praesentium harum officia laboriosam rerum cum sequi.
+            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab
+            quis deserunt incidunt architecto earum perspiciatis recusandae,
+            suscipit, nemo, praesentium harum officia laboriosam rerum cum
+            sequi.
           </p>
         </div>
         <div class="foto_barber2"></div>
@@ -103,14 +111,72 @@
       <article class="galery_article">
         <h2 class="galery_title">Galery</h2>
         <div class="fotos_container">
-          <img class="galery_foto" src="./src/grid1.jpg" alt="">
-          <img class="galery_foto" src="./src/grid2.jpg" alt="">
-          <img class="galery_foto" src="./src/grid3.jpg" alt="">
-          <img class="galery_foto" src="./src/grid1.jpg" alt="">
-          <img class="galery_foto" src="./src/grid5.jpg" alt="">
-          <img class="galery_foto" src="./src/grid6.jpg" alt="">
+          <img class="galery_foto" src="./src/grid1.jpg" alt="" />
+          <img class="galery_foto" src="./src/grid2.jpg" alt="" />
+          <img class="galery_foto" src="./src/grid3.jpg" alt="" />
+          <img class="galery_foto" src="./src/grid1.jpg" alt="" />
+          <img class="galery_foto" src="./src/grid5.jpg" alt="" />
+          <img class="galery_foto" src="./src/grid6.jpg" alt="" />
         </div>
       </article>
     </section>
+    <section id="address" class="address_container">
+      <h2>Address</h2>
+      <iframe
+        class="map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57485.822461958014!2d-80.27277871073137!3d25.775058469333512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b762b038d371%3A0xfd303408c3fb05d!2sNitro%20Barber%20shop!5e0!3m2!1ses-419!2suy!4v1700099864717!5m2!1ses-419!2suy"
+        width="100%%"
+        height="650"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </section>
+    <section id="ask" class="ask_container">
+      <h2 class="ask_title">ask for a Date</h2>
+      <form action="" class="ask_form">
+        <div class="ask_input_container">
+          <label for="name">Full name</label>
+          <input
+            type="text"
+            placeholder="Ex: Jhon Puth"
+            id="name"
+            class="input"
+          />
+        </div>
+        <div class="ask_input_container">
+          <label for="email">Mail</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Ex: jhon.Puth@gmail.com"
+            class="input"
+          />
+        </div>
+        <div class="ask_input_container">
+          <label for="date">Date</label>
+          <input
+            type="date"
+            name="date"
+            id="date"
+            placeholder="Ex: 10/10/2023"
+            class="input"
+          />
+        </div>
+        <div class="ask_input_container">
+          <label for="time">Time</label>
+          <input type="time" name="time" id="time" class="input" />
+        </div>
+      </form>
+      <div class="ask_footer">
+        <p>If you alrady have acount, make a date here</p>
+        <a href="" class="ask_button">Login</a>
+      </div>
+    </section>
+    <footer>
+      Logo
+    </footer>
   </body>
 </html>
