brutalism style added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <div class="text-hero">
           <span>Come and</span> Change <br /><span>Your </span>Style
         </div>
-        <a href="">ask</a>
+        <div class="button_container">
+          <img src="./src/Arrow.svg" alt="arrow" class="arrow" />
+          <a href="">Make a Date</a>
+        </div>
       </article>
     </main>
     <section class="prices_container" id="prices">
@@ -72,40 +75,35 @@
         </div>
       </article>
     </section>
-    <section id="aboutUs" class="aboutUs_container">
+    <section id="aboutUs" class="aboutUs_section">
       <h2 class="aboutUs_title">Our Team</h2>
-      <article class="barber_article">
-        <div class="foto_barber1"></div>
-        <div class="text_article_aboutUs">
-          <h2 class="title_article_aboutUs">Juan Perez</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat,
-            necessitatibus. Veritatis quam repudiandae error sequi architecto
-            nemo impedit magni? Provident quos autem voluptas, at aliquam alias
-            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab
-            quis deserunt incidunt architecto earum perspiciatis recusandae,
-            suscipit, nemo, praesentium harum officia laboriosam rerum cum
-            sequi.
-          </p>
-        </div>
-      </article>
-      <article class="barber_article">
-        <div class="text_article_aboutUs">
-          <h2 class="title_article_aboutUs">Reina Rodriguez</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat,
-            necessitatibus. Veritatis quam repudiandae error sequi architecto
-            nemo impedit magni? Provident quos autem voluptas, at aliquam alias
-            vero? Magnam, fugit officiis. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Nemo explicabo quia voluptas velit. Ab
-            quis deserunt incidunt architecto earum perspiciatis recusandae,
-            suscipit, nemo, praesentium harum officia laboriosam rerum cum
-            sequi.
-          </p>
-        </div>
-        <div class="foto_barber2"></div>
-      </article>
+      <div class="aboutUs_container">
+        <article class="barber_container">
+          <div class="barber_info">
+            <img src="" alt="" />
+            <div class="barber_info_text">
+              <h2>Alejandra Pérez</h2>
+              <h3>Barber and Stylist</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo
+                voluptatem dolorem, ullam quos animi sint quaerat ea totam.
+                Enim, rem at eveniet natus dolorum minus ipsa? Sapiente expedita
+                nihil repellendus? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Obcaecati voluptas non libero id illo delectus
+                reiciendis optio provident natus harum consequuntur minus ab,
+                aspernatur aliquam, veniam officiis aperiam beatae temporibus!
+              </p>
+            </div>
+          </div>
+          <div class="barber_insta_section">
+            <h2>Follow me on Instagram</h2>
+            <div>
+              <img src="" alt="">
+              <h3><a href="">@Alejandra_Barber</a></h3>
+            </div>
+          </div>
+        </article>
+      </div>
     </section>
     <section id="galery" class="galery_container">
       <article class="galery_article">
@@ -175,8 +173,6 @@
         <a href="" class="ask_button">Login</a>
       </div>
     </section>
-    <footer>
-      Logo
-    </footer>
+    <footer>Logo</footer>
   </body>
 </html>
